    extension. 
    * data/seahorse.schemas.in:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-util.c: Remove 'Text Mode' option. Remove 'Armor'
    option from the user interface. These are automatic now. Overriding 
    'ASCII Armor' mode is done in gconf at: /desktop/pgp/ascii_armor
    
2005-03-25  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Change default extension to '.pgp' for 
    compatibility. Fixed problems with suffixes (and a memory leak).
    
2005-03-22  Nate Nielsen <nielsen@memberwebs.com>

    * bonobo/seahorse-pgp-file-listener.c: Remove gnome.h header. 
    * agent/seahorse-agent-cache.glade: 
    * agent/seahorse-agent-prompt.c:
    * agent/seahorse-agent-status.c:
    * bonobo/seahorse-pgp-file-listener.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-util.c:
    * plugins/gedit/seahorse-gedit.schemas.in:
    * plugins/gedit/seahorse-pgp-gedit.plugin.desktop.in:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/main.c:
    * src/seahorse-generate-druid.glade:
    * src/seahorse-key-manager.glade:
    * src/seahorse-keyserver-results.glade:
    * src/seahorse-pgp-encrypted.desktop.in:
    * src/seahorse-pgp-signature.desktop.in:
    * src/seahorse.desktop.in: Remove unnecessary PGP or GPG 
    references, and use 'passphrase' consistently. 

2005-03-20  Nate Nielsen <nielsen@memberwebs.com>

    * configure.in: Support for gedit 2.10
    * Makefile.am:
    * configure.in:
    * bonobo/Makefile.am:
    * plugins/Makefile.am:
    * plugins/nautilus-ext/Makefile.am:
    * plugins/nautilus-ext/seahorse-nautilus-module.c:
    * plugins/nautilus-ext/seahorse-nautilus.c:
    * plugins/nautilus-ext/seahorse-nautilus.h: Gnome 2.10 nautilus
    extension support. Patch by Fernando Herrera. (bug #160360)
    