@@ -9,6 +9,9 @@
     * libseahorse/seahorse-util.c: Remove 'Text Mode' option. Remove 'Armor'
     option from the user interface. These are automatic now. Overriding 
     'ASCII Armor' mode is done in gconf at: /desktop/pgp/ascii_armor
+    * libseahorse/seahorse-passphrase.c: 
+    * src/seahorse-key-op.c: Fix some hanging problems when modifying key 
+    properties
     
 2005-03-25  Nate Nielsen <nielsen@memberwebs.com>
 
